nginx/application-ingress/elastic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/elasticsearch/(.*)$ /$1 break;
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /elasticsearch
        pathType: Prefix
        backend:
          service:
            name: hackpack-elasticsearch-cluster-es-http
            port:
              number: 9200
