nginx/application-ingress/rabbit-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: default
  annotations:
   # nginx.ingress.kubernetes.io/configuration-snippet: |
   #    rewrite ^/rabbitmq/api/(.*) /api/$1 break;
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /rabbitmq/(.*)
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-logging
            port:
              number: 15672
